2010-03-23  Juri Linkov  <juri@jurta.org>

	* replace.el (occur-accumulate-lines, occur-engine):
	Use `occur-engine-line' instead of duplicate code.
	(occur-engine-line): New function created from duplicate code
	in `occur-accumulate-lines' and `occur-engine'.

2010-03-23  Juri Linkov  <juri@jurta.org>

	* finder.el: Remove TODO tasks.

	* info.el (Info-finder-find-node): Add node "all"
	with all package info.  Handle a list of multiple keywords
	separated by comma.
	(info-finder): In interactive use with a prefix argument,
	use `completing-read-multiple' to read a list of keywords
	separated by comma.

2010-03-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	Add a new completion style `substring'.
	* minibuffer.el (completion-basic--pattern): New function.
	(completion-basic-try-completion, completion-basic-all-completions):
	Use it.
	(completion-substring--all-completions)
	(completion-substring-try-completion)
	(completion-substring-all-completions): New functions.
	(completion-styles-alist): New style `substring'.

2010-03-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	Get rid of .elc files after removal of the corresponding .el.
	* Makefile.in (compile-clean): New target.
	(compile-main): Use it.

2010-03-22  Jan Djärv  <jan.h.d@swipnet.se>

	* Makefile.in (compile-main): cd to $(lisp) in a sub-shell, so we
	don't do make there.  When compiling with separate object dir, there
	is no Makefile there.

2010-03-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	Get rid of the ELCFILES abomination, again.
	* Makefile.in (update-elclist, ELCFILES, compile-last): Remove.
	(all, compile): Don't call compile-last.
	(compile-main): Build the "elcfiles" list dynamically.
	(compile-targets): New (internal) target.

2010-03-21  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (top_srcdir): Define.
	(abs_top_builddir): Define.
	(srcdir): Don't append `/..'.
	(EMACS): Use ${abs_top_builddir}.
	(all, compile, compile-always, compile-last): Don't set emacswd.